--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>MLTG引き換え所</title>
-  <meta property="og:url" content="https://mltt.metaguri-labo.com/" />
+  <meta property="og:url" content="https://mltt.metagri-labo.com/" />
   <meta property="og:title" content="MLTG引き換え所" />
   <meta property="og:description" content="MetagriLabo Thanks Gift（MLTG）
     Metaguri研究所での活動で手に入れたMLTGを実際の農産物＆海産物などと引き換えられます。
